# stereogram

./: README.md  pyproject.toml
src/stereogram/: main.py
