[project]
name = "stereogram"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kyle Kestell", email = "kyle@kestell.org"},
]
dependencies = ["opencv-python>=4.10.0.84", "numpy>=2.2.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "BSD0"}


[tool.pdm]
distribution = false
